[gd_scene load_steps=14 format=3 uid="uid://c1u4h1x8nx1t3"]

[ext_resource type="Script" path="res://ui/Shops/shop.gd" id="1_rgx1f"]
[ext_resource type="Texture2D" uid="uid://2p5xlj0knnee" path="res://assets/ui/button.png" id="2_1qmga"]
[ext_resource type="Script" path="res://ui/Shops/sell.gd" id="3_5d0dw"]
[ext_resource type="PackedScene" uid="uid://c2eemep8skl7h" path="res://ui/ui_button.tscn" id="3_mej8u"]
[ext_resource type="Theme" uid="uid://b7h2gckjyn61m" path="res://ui/theme/theme.tres" id="4_7xw6o"]
[ext_resource type="Script" path="res://ui/Shops/upgrade.gd" id="4_57mfb"]
[ext_resource type="Texture2D" uid="uid://xw68rrdxl2ih" path="res://assets/ui/shops/blueprint.png" id="4_f3fbu"]
[ext_resource type="AudioStream" uid="uid://ixrgwn0h3277" path="res://assets/sounds/shops/weapload.wav" id="7_x6ht5"]

[sub_resource type="Animation" id="Animation_w645c"]
resource_name = "Fall"

[sub_resource type="Animation" id="Animation_xdmmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop/HBoxContainer/Buy/Panel/ItemContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shop:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mkawg"]
resource_name = "fall_items"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop/HBoxContainer/Buy/Panel/ItemContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.21914, 1),
"update": 0,
"values": [Vector2(0, -322), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tlvpr"]
resource_name = "rise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.833333, 1),
"transitions": PackedFloat32Array(0.258816, 1, 1),
"update": 0,
"values": [Vector2(0, 547), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.633333, 0.833333, 1),
"transitions": PackedFloat32Array(1, 0.307786, 1.46409, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.1), Vector2(0.95, 1.1), Vector2(1.02, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mkkd2"]
_data = {
"Fall": SubResource("Animation_w645c"),
"RESET": SubResource("Animation_xdmmr"),
"fall_items": SubResource("Animation_mkawg"),
"rise": SubResource("Animation_tlvpr")
}

[node name="Shop" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_rgx1f")

[node name="Shop" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 225)
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="HBoxContainer" type="VBoxContainer" parent="Shop"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Buy" type="VBoxContainer" parent="Shop/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Panel" type="Panel" parent="Shop/HBoxContainer/Buy"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="ItemContainer" type="HBoxContainer" parent="Shop/HBoxContainer/Buy/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Shop/HBoxContainer/Buy"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_1qmga")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 12

[node name="Sell" type="VBoxContainer" parent="Shop/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
script = ExtResource("3_5d0dw")

[node name="NinePatchRect" type="NinePatchRect" parent="Shop/HBoxContainer/Sell"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_1qmga")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="Shop/HBoxContainer/Sell/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_7xw6o")
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Shop/HBoxContainer/Sell/NinePatchRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="Upgrade" type="HBoxContainer" parent="Shop/HBoxContainer"]
visible = false
z_index = -1
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
script = ExtResource("4_57mfb")

[node name="Bench" type="NinePatchRect" parent="Shop/HBoxContainer/Upgrade"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
texture = ExtResource("2_1qmga")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 12

[node name="Panel" type="Panel" parent="Shop/HBoxContainer/Upgrade/Bench"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Blueprint" type="TextureRect" parent="Shop/HBoxContainer/Upgrade/Bench/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("4_f3fbu")
stretch_mode = 1

[node name="Center" type="Panel" parent="Shop/HBoxContainer/Upgrade/Bench/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Ship" type="Sprite2D" parent="Shop/HBoxContainer/Upgrade/Bench/Panel/Center"]

[node name="Items" type="NinePatchRect" parent="Shop/HBoxContainer/Upgrade"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("2_1qmga")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="Shop/HBoxContainer/Upgrade/Items"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/HBoxContainer/Upgrade/Items/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = -80

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Shop/HBoxContainer/Upgrade"]
stream = ExtResource("7_x6ht5")

[node name="MarginContainer" type="MarginContainer" parent="Shop/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="buttons" type="HBoxContainer" parent="Shop/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
mouse_filter = 2

[node name="BuyButton" parent="Shop/HBoxContainer/buttons" instance=ExtResource("3_mej8u")]
layout_mode = 2
text = "BUY"

[node name="SellButton" parent="Shop/HBoxContainer/buttons" instance=ExtResource("3_mej8u")]
layout_mode = 2
text = "SELL"

[node name="UpgradeButton" parent="Shop/HBoxContainer/buttons" instance=ExtResource("3_mej8u")]
layout_mode = 2
text = "UPGRADE"

[node name="QuitButton" parent="Shop/HBoxContainer/buttons" instance=ExtResource("3_mej8u")]
layout_mode = 2
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mkkd2")
}
speed_scale = 2.0

[connection signal="pressed" from="Shop/HBoxContainer/buttons/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/buttons/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/buttons/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/buttons/QuitButton" to="." method="_on_quit_button_pressed"]
